--- a/cartisan-base/src/main/resources/bootstrap.yml
+++ b/cartisan-base/src/main/resources/bootstrap.yml
@@ -1,10 +1,8 @@
 server:
   port: 9001
-  servlet:
-    context-path: /base
 
 spring:
   application:
-    name: cartisan-base
+    name: base
   profiles:
     active: dev
