--- a/cartisan-eureka/src/main/resources/application-staging1.yml
+++ b/cartisan-eureka/src/main/resources/application-staging1.yml
@@ -2,7 +2,7 @@ server:
   port: 8761
 spring:
   application:
-    name: cartisan-eureka
+    name: eureka
 eureka:
   server:
     enable-self-preservation: false #生产中需要打开
