--- a/cartisan-management/src/main/resources/bootstrap.yml
+++ b/cartisan-management/src/main/resources/bootstrap.yml
@@ -1,10 +1,8 @@
 server:
   port: 8081
-  servlet:
-    context-path: /management
 
 spring:
   application:
-    name: cartisan-management
+    name: management
   profiles:
     active: dev
