management: 添加熔断器示例，并能通过Hystrix dashboard监控

--- a/cartisan-base/pom.xml
+++ b/cartisan-base/pom.xml
@@ -84,6 +84,14 @@
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
 
+        <!-- actuator监控信息完善 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
+
         <!-- develop tools -->
         <dependency>
             <groupId>io.springfox</groupId>
