--- a/cartisan-base/src/main/resources/bootstrap-dev.yml
+++ b/cartisan-base/src/main/resources/bootstrap-dev.yml
@@ -1,6 +1,9 @@
+spring:
+  cloud:
+    config:
+      enabled: false
+
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-  instance:
-    prefer-ip-address: true
