--- a/cartisan-eureka/src/main/resources/application-staging1.yml
+++ b/cartisan-eureka/src/main/resources/application-staging1.yml
@@ -5,12 +5,12 @@ spring:
     name: eureka
 eureka:
   server:
-    enable-self-preservation: false #生产中需要打开
+    enable-self-preservation: true #生产中需要打开
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}2:8762/eureka/
+      defaultZone: http://${eureka.instance.hostname}:8762/eureka/
   instance:
     prefer-ip-address: true
-    hostname: cartisan-eureka
+    hostname: cartisan-eureka2
