--- a/cartisan-common-mysql/src/main/resources/application-mysql.yml
+++ b/cartisan-common-mysql/src/main/resources/application-mysql.yml
@@ -1,5 +1,20 @@
 spring:
   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
+    druid:
+      initial-size: 1
+      max-active: 10
+      max-wait: 3000
+      filters: mergeStat
+      validation-query: select 1
+      test-on-borrow: true
+      time-between-eviction-runs-millis: 120000
+      min-evictable-idle-time-millis: 60000
+      min-idle: 1
+      web-stat-filter:
+        exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid*,/swagger-*"
+      stat-view-servlet:
+        url-pattern: "/druid/*"
   jpa:
     database: MySQL
