--- a/cartisan-base/src/main/resources/application-dev.yml
+++ b/cartisan-base/src/main/resources/application-dev.yml
@@ -24,6 +24,7 @@ spring:
       probability: 1.0 # 将采样比例设置为 1.0，也就是全部都需要。默认是 0.1
 
 cartisan:
-  name: Cartisan
-  version: 1.1.0
+  signature:
+    enable: false
+    secret: cartisan
 
