--- a/cartisan-common-core/pom.xml
+++ b/cartisan-common-core/pom.xml
@@ -16,7 +16,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
-
+        <!-- 工具 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
