统一集成Swagger，通过网关访问各服务的接口文档

--- a/cartisan-base/src/main/resources/bootstrap-dev.yml
+++ b/cartisan-base/src/main/resources/bootstrap-dev.yml
@@ -7,3 +7,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+  instance:
+    status-page-url: http://localhost:9001/swagger-ui.html
