--- a/cartisan-base/src/main/resources/bootstrap.yml
+++ b/cartisan-base/src/main/resources/bootstrap.yml
@@ -7,3 +7,16 @@ spring:
   profiles:
     include: web, mysql
     active: dev
+
+
+cartisan:
+  redis:
+    root: base
+  info:
+    title: 基础服务
+    serviceUrl: http://www.cartisan.com
+    version: 1.0
+    contact:
+      name: colin
+      url: zhang_colin.github.com
+      email: zhang_colin@163.com
