--- a/cartisan-common-web/src/main/resources/application-log.yml
+++ b/cartisan-common-web/src/main/resources/application-log.yml
@@ -1,14 +1,14 @@
 logging:
-  pattern:
-    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} %5p ${PID} --- [%t] %-40.40logger{39} : %m%n%wEx"
+#  pattern:
+#    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} %5p ${PID} --- [%t] %-40.40logger{39} : %m%n%wEx"
   level:
     root: info
     com.cartisan.common.filters.RequestLoggingFilter: debug
     com.cartisan: debug
 
 ---
-spring:
-  profiles: dev
-logging:
-  pattern:
-    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID} %10.10X{identify}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
+#spring:
+#  profiles: dev
+#logging:
+#  pattern:
+#    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID} %10.10X{identify}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
