--- a/cartisan-gateway/src/main/resources/application-dev.yml
+++ b/cartisan-gateway/src/main/resources/application-dev.yml
@@ -9,20 +9,27 @@ spring:
     host: localhost
     port: 6379
 
-zuul:
-  routes:
-    myProduct:
-      path: /myProduct/**
-      serviceId: cartisan-example-product
-      # 敏感头的过滤，不会传到后端去，默认是 3 个【Cookie,Set-Cookie,Authorization】，设成空表示不过滤，需要传到后端去
-      sensitiveHeaders:
-  # 全部服务忽略敏感头
-  sensitiveHeaders:
+#zuul:
+#  routes:
+#    base:
+#      path: /swagger-proxy/base/**
+#      serviceId: base
+#    management:
+#      path: /swagger-proxy/management/**
+#      serviceId: management
+#    myProduct:
+#      path: /myProduct/**
+#      serviceId: cartisan-example-product
+#      # 敏感头的过滤，不会传到后端去，默认是 3 个【Cookie,Set-Cookie,Authorization】，设成空表示不过滤，需要传到后端去
+#      sensitiveHeaders:
+#  # 全部服务忽略敏感头
+#  sensitiveHeaders:
 
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+
 
 
