--- a/cartisan-management/src/main/resources/application-dev.yml
+++ b/cartisan-management/src/main/resources/application-dev.yml
@@ -15,3 +15,9 @@ spring:
   sleuth:
     sampler:
       probability: 1.0 # 将采样比例设置为 1.0，也就是全部都需要。默认是 0.1
+
+cartisan:
+  signature:
+    enable: false
+    secret: cartisan
+
