--- a/cartisan-management/src/main/resources/bootstrap.yml
+++ b/cartisan-management/src/main/resources/bootstrap.yml
@@ -8,3 +8,14 @@ spring:
     include: web
     active: dev
 
+cartisan:
+  redis:
+    root: management
+  info:
+    title: 管理后台服务
+    serviceUrl: http://www.cartisan.com
+    version: 1.0
+    contact:
+      name: colin
+      url: zhang_colin.github.com
+      email: zhang_colin@163.com
