--- a/cartisan-base/src/main/resources/bootstrap-dev.yml
+++ b/cartisan-base/src/main/resources/bootstrap-dev.yml
@@ -9,3 +9,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     status-page-url: http://localhost:9001/swagger-ui.html
+
+#logging:
+#  path: /Users/colin/Workspace/cartisan/log/cartisan/base/
+#  file: cartisan-base
