--- a/cartisan-common-web/src/main/resources/application-log.yml
+++ b/cartisan-common-web/src/main/resources/application-log.yml
@@ -1,14 +1,18 @@
 logging:
-#  pattern:
-#    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} %5p ${PID} --- [%t] %-40.40logger{39} : %m%n%wEx"
+  pattern:
+    file: "[%d{yyyyMMdd HHmmss.SSS} %X{identify}] %level - [%thread %logger{30}] - [%replace(%msg){'\n', ''}]%n"
   level:
     root: info
+    org.apache.http.wire: info
+    org.apache.http.headers: info
     com.cartisan.common.filters.RequestLoggingFilter: debug
     com.cartisan: debug
 
 ---
-#spring:
-#  profiles: dev
-#logging:
-#  pattern:
-#    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID} %10.10X{identify}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
+spring:
+  profiles: dev
+logging:
+  pattern:
+    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID} %10.10X{identify}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
+#    console: "[%d{yyyyMMdd HHmmss.SSS} %X{identify}] %level - [%thread %logger{30}] - [%replace(%msg){'\n', ''}]%n"
+
