--- a/cartisan-management/src/main/resources/bootstrap-dev.yml
+++ b/cartisan-management/src/main/resources/bootstrap-dev.yml
@@ -7,3 +7,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+#logging:
+#  path: /Users/colin/Workspace/cartisan/log/cartisan/management/
+#  file: cartisan-management
