--- a/cartisan-base/src/main/resources/application-dev.yml
+++ b/cartisan-base/src/main/resources/application-dev.yml
@@ -12,12 +12,22 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-    username: guest
-    password: guest
+    virtual-host: /cartisan
+    username: rabbitmqadmin
+    password: 123456
 
   redis:
-    host: localhost
-    port: 6379
+    host: localhost # Redis服务器地址
+    database: 0 # Redis数据库索引（默认为0）
+    port: 6379 # Redis服务器连接端口
+    password: 123456 # Redis服务器连接密码（默认为空）
+    jedis:
+      pool:
+        max-active: 8 # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 8 # 连接池中的最大空闲连接
+        min-idle: 0 # 连接池中的最小空闲连接
+    timeout: 0ms # 连接超时时间（毫秒）
 
   zipkin:
     base-url: http://localhost:9411   # 指定zipkin的服务端的地址
