--- a/cartisan-system/pom.xml
+++ b/cartisan-system/pom.xml
@@ -29,6 +29,16 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring-boot-starter</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
 </project>
