--- a/cartisan-huiduoduo/src/main/resources/application-staging.yml
+++ b/cartisan-huiduoduo/src/main/resources/application-staging.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cartisan?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://49.234.49.112:3306/cartisan?characterEncoding=utf-8&useSSL=false
     username: root
     password: truth
 #    platform: h2
@@ -10,14 +10,14 @@ spring:
     show-sql: true
 
   rabbitmq:
-    host: localhost
+    host: 49.234.49.112
     port: 5672
     virtual-host: /cartisan
     username: rabbitmqadmin
     password: 123456
 
   redis:
-    host: localhost # Redis服务器地址
+    host: 49.234.49.112 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
