--- a/cartisan-huiduoduo/src/main/resources/application-prod.yml
+++ b/cartisan-huiduoduo/src/main/resources/application-prod.yml
@@ -1,20 +1,20 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cartisan?characterEncoding=utf-8&useSSL=false
-    username: root
-    password: truth
+    url: jdbc:mysql://rm-6wexg0y7u6x16c1x255620.mysql.japan.rds.aliyuncs.com:3306/cartisan?characterEncoding=utf-8&useSSL=false
+    username: cartisan
+    password: c@rt1s@n
   jpa:
     show-sql: true
 
   rabbitmq:
-    host: localhost
+    host: 47.245.58.216
     port: 5672
     virtual-host: /cartisan
     username: rabbitmqadmin
     password: 123456
 
   redis:
-    host: localhost # Redis服务器地址
+    host: 47.245.58.216 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
@@ -27,7 +27,7 @@ spring:
     timeout: 200ms # 连接超时时间（毫秒）
 
   zipkin:
-    base-url: http://49.234.49.112:9411   # 指定zipkin的服务端的地址
+    base-url: http://47.245.58.216:9411   # 指定zipkin的服务端的地址
 
   sleuth:
     sampler:
