--- a/cartisan-huiduoduo/src/main/resources/application-prod.yml
+++ b/cartisan-huiduoduo/src/main/resources/application-prod.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://rm-6wexg0y7u6x16c1x2xo.mysql.japan.rds.aliyuncs.com:3306/cartisan?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://rm-6wexg0y7u6x16c1x255620.mysql.japan.rds.aliyuncs.com:3306/cartisan?characterEncoding=utf-8&useSSL=false
     username: cartisan
-    password: c@rt1s@n
+    password: 123@qazwsx
   jpa:
     show-sql: true
 
