暂时去除访问配置中心的配置

--- a/cartisan-huiduoduo/src/main/resources/bootstrap-staging.yml
+++ b/cartisan-huiduoduo/src/main/resources/bootstrap-staging.yml
@@ -1,11 +1,11 @@
-spring:
-  cloud:
-    config:
-      enabled: false
-      discovery:
-        enabled: true
-        service-id: config
-      profile: staging
+#spring:
+#  cloud:
+#    config:
+#      enabled: false
+#      discovery:
+#        enabled: true
+#        service-id: config
+#      profile: staging
 
 eureka:
   client:
