--- a/cartisan-huiduoduo/src/main/resources/bootstrap-prod.yml
+++ b/cartisan-huiduoduo/src/main/resources/bootstrap-prod.yml
@@ -1,11 +1,11 @@
-spring:
-  cloud:
-    config:
-      enabled: false
-      discovery:
-        enabled: true
-        service-id: config
-      profile: prod
+#spring:
+#  cloud:
+#    config:
+#      enabled: false
+#      discovery:
+#        enabled: true
+#        service-id: config
+#      profile: prod
 
 eureka:
   client:
