--- a/cartisan-gateway/src/main/resources/application-prod.yml
+++ b/cartisan-gateway/src/main/resources/application-prod.yml
@@ -1,13 +1,13 @@
 spring:
   rabbitmq:
-    host: 47.245.58.216
+    host: www.hsqjp.com
     port: 5672
     virtual-host: /cartisan
     username: rabbitmqadmin
     password: 123456
 
   redis:
-    host: 47.245.58.216
+    host: www.hsqjp.com
     port: 6379
 
 #zuul:
@@ -36,3 +36,8 @@ ribbon:
   ReadTimeout: 60000  # 单位毫秒数
   SocketTimeout: 60000
 
+server:
+  ssl:
+    key-store: classpath:2786492_hsqjp.com.pfx
+    key-store-password: J9m6gzJ5
+    key-store-type: PKCS12
