--- a/cartisan-gateway/src/main/resources/bootstrap-prod.yml
+++ b/cartisan-gateway/src/main/resources/bootstrap-prod.yml
@@ -10,7 +10,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://47.245.58.216:8761/eureka
+      defaultZone: http://www.hsqjp.com:8761/eureka
 
 logging:
   path: /var/log/cartisan/gateway/
