引用的库与Spring

--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -26,11 +26,9 @@
         <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
 
         <!-- db -->
-        <mysql.version>8.0.17</mysql.version>
         <druid-spring-boot-starter.version>1.1.20</druid-spring-boot-starter.version>
 
         <!-- util -->
-        <commons-lang3.version>3.9</commons-lang3.version>
         <fastjson.version>1.2.61</fastjson.version>
 
         <!-- Swagger 文档 -->
@@ -50,24 +48,12 @@
 
             <!-- 数据库 -->
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.version}</version>
-                <scope>runtime</scope>
-            </dependency>
-
-            <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid-spring-boot-starter.version}</version>
             </dependency>
 
             <!-- 工具 -->
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang3.version}</version>
-            </dependency>
 
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -101,11 +87,11 @@
 
     <dependencies>
         <!-- develop tools -->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-devtools</artifactId>-->
-<!--            <scope>runtime</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
