--- a/cartisan-huiduoduo/pom.xml
+++ b/cartisan-huiduoduo/pom.xml
@@ -30,7 +30,10 @@
             <scope>compile</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
 
 
     </dependencies>
