--- a/cartisan-system/pom.xml
+++ b/cartisan-system/pom.xml
@@ -36,7 +36,10 @@
             <version>1.4.0</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
 
 
     </dependencies>
