--- a/cartisan-gateway/pom.xml
+++ b/cartisan-gateway/pom.xml
@@ -18,7 +18,7 @@
 		<!-- cartisan 基础库 -->
 		<dependency>
 			<groupId>com.cartisan</groupId>
-			<artifactId>cartisan-common-web</artifactId>
+			<artifactId>cartisan-common-cloud</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
