调整pom文件结构

--- a/cartisan-huiduoduo/pom.xml
+++ b/cartisan-huiduoduo/pom.xml
@@ -7,11 +7,10 @@
         <artifactId>cartisan-parent</artifactId>
         <groupId>com.cartisan</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../cartisan-parent/pom.xml</relativePath>
     </parent>
 
-    <groupId>com.cartisan</groupId>
     <artifactId>cartisan-huiduoduo</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
