--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -26,6 +26,8 @@
         <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
 
         <!-- db -->
+        <mybatis.spring.boot.version>2.1.0</mybatis.spring.boot.version>
+        <pagehelper.version>1.2.12</pagehelper.version>
         <druid-spring-boot-starter.version>1.1.20</druid-spring-boot-starter.version>
 
         <!-- util -->
@@ -47,6 +49,18 @@
             </dependency>
 
             <!-- 数据库 -->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.spring.boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
