--- a/cartisan-common/cartisan-common-web/pom.xml
+++ b/cartisan-common/cartisan-common-web/pom.xml
@@ -76,6 +76,16 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+        </dependency>
+
         <!-- Swagger 文档 -->
         <dependency>
             <groupId>io.springfox</groupId>
