--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.8.RELEASE</version>
+        <version>2.2.1.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -24,7 +24,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
         <shiro.version>1.4.0</shiro.version>
 
         <!-- db -->
@@ -37,6 +37,8 @@
         <fastjson.version>1.2.61</fastjson.version>
         <jjwt.version>0.10.7</jjwt.version>
         <zxing.version>3.4.0</zxing.version>
+
+        <!-- 测试 -->
 
         <!-- Swagger 文档 -->
         <swagger.version>1.5.23</swagger.version>
@@ -120,6 +122,8 @@
                 <artifactId>javase</artifactId>
                 <version>${zxing.version}</version>
             </dependency>
+
+            <!-- 测试 -->
 
             <!-- Swagger 文档 -->
             <dependency>
