--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -31,6 +31,7 @@
         <mybatis.spring.boot.version>2.1.0</mybatis.spring.boot.version>
         <pagehelper.version>1.2.12</pagehelper.version>
         <druid-spring-boot-starter.version>1.1.20</druid-spring-boot-starter.version>
+        <p6spy.version>3.8.6</p6spy.version>
 
         <!-- util -->
         <fastjson.version>1.2.61</fastjson.version>
@@ -78,7 +79,11 @@
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid-spring-boot-starter.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>p6spy</groupId>
+                <artifactId>p6spy</artifactId>
+                <version>${p6spy.version}</version>
+            </dependency>
 
 
             <!-- 工具 -->
