--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -35,6 +35,7 @@
 
         <!-- util -->
         <fastjson.version>1.2.61</fastjson.version>
+        <mapstruct.version>1.3.1.Final</mapstruct.version>
         <jjwt.version>0.10.7</jjwt.version>
         <zxing.version>3.4.0</zxing.version>
 
@@ -92,6 +93,20 @@
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
 
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
