使用Spring-Security做安全框架

--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,6 @@
         <module>cartisan-persistence</module>
         <module>cartisan-web</module>
         <module>cartisan-cloud</module>
+        <module>cartisan-security</module>
     </modules>
 </project>
