--- a/cartisan-core/pom.xml
+++ b/cartisan-core/pom.xml
@@ -17,6 +17,11 @@
     <dependencies>
         <!-- 工具 -->
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
