--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -25,7 +25,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
-        <shiro.version>1.4.0</shiro.version>
+        <shiro.version>1.4.2</shiro.version>
+        <shiro.redis.version>3.2.3</shiro.redis.version>
 
         <!-- db -->
         <mybatis.spring.boot.version>2.1.0</mybatis.spring.boot.version>
@@ -34,6 +35,8 @@
         <p6spy.version>3.8.6</p6spy.version>
 
         <!-- util -->
+        <guava.version>28.2-jre</guava.version>
+        <commons-io.version>2.6</commons-io.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
         <jjwt.version>0.10.7</jjwt.version>
         <zxing.version>3.4.0</zxing.version>
@@ -55,11 +58,28 @@
                 <scope>import</scope>
             </dependency>
 
+            <!-- shiro -->
             <dependency>
                 <groupId>org.apache.shiro</groupId>
                 <artifactId>shiro-spring-boot-starter</artifactId>
                 <version>${shiro.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-spring</artifactId>
+                <version>${shiro.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-ehcache</artifactId>
+                <version>${shiro.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.crazycake</groupId>
+                <artifactId>shiro-redis</artifactId>
+                <version>${shiro.redis.version}</version>
+            </dependency>
+
 
             <!-- 数据库 -->
             <dependency>
@@ -87,6 +107,18 @@
 
 
             <!-- 工具 -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
