更新日志记录过滤器

--- a/cartisan-parent/pom.xml
+++ b/cartisan-parent/pom.xml
@@ -25,8 +25,6 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
-        <shiro.version>1.4.2</shiro.version>
-        <shiro.redis.version>3.2.3</shiro.redis.version>
 
         <!-- db -->
         <mybatis.spring.boot.version>2.1.0</mybatis.spring.boot.version>
@@ -46,6 +44,7 @@
         <!-- Swagger 文档 -->
         <swagger.version>1.5.23</swagger.version>
         <swagger-fox.version>2.9.2</swagger-fox.version>
+        <knife4j.version>2.0.2</knife4j.version>
     </properties>
 
     <dependencyManagement>
@@ -56,28 +55,6 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-
-            <!-- shiro -->
-            <dependency>
-                <groupId>org.apache.shiro</groupId>
-                <artifactId>shiro-spring-boot-starter</artifactId>
-                <version>${shiro.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.shiro</groupId>
-                <artifactId>shiro-spring</artifactId>
-                <version>${shiro.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.shiro</groupId>
-                <artifactId>shiro-ehcache</artifactId>
-                <version>${shiro.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.crazycake</groupId>
-                <artifactId>shiro-redis</artifactId>
-                <version>${shiro.redis.version}</version>
             </dependency>
 
 
@@ -184,6 +161,11 @@
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-models</artifactId>
                 <version>${swagger.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
