--- a/cartisan-web/src/main/resources/application-log.yml
+++ b/cartisan-web/src/main/resources/application-log.yml
@@ -10,9 +10,10 @@ logging:
 
 ---
 spring:
-  profiles: dev
+  profiles: local
 logging:
   pattern:
-    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID} %10.10X{identify}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
+#    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID} %10.10X{identify}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
+    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID} %10.10X{identify} %10.10X{user}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
 #    console: "[%d{yyyyMMdd HHmmss.SSS} %X{identify}] %level - [%thread %logger{30}] - [%replace(%msg){'\n', ''}]%n"
 
