--- a/cartisan-persistence/pom.xml
+++ b/cartisan-persistence/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
